; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_pe_module.c_pe_module_remove.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_pe_module.c_pe_module_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.process = type { i32 }
%struct.module_format = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.process*, %struct.module_format*)* @pe_module_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pe_module_remove(%struct.process* %0, %struct.module_format* %1) #0 {
  %3 = alloca %struct.process*, align 8
  %4 = alloca %struct.module_format*, align 8
  store %struct.process* %0, %struct.process** %3, align 8
  store %struct.module_format* %1, %struct.module_format** %4, align 8
  %5 = load %struct.module_format*, %struct.module_format** %4, align 8
  %6 = getelementptr inbounds %struct.module_format, %struct.module_format* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = call i32 @pe_unmap_file(i32* %9)
  %11 = call i32 (...) @GetProcessHeap()
  %12 = load %struct.module_format*, %struct.module_format** %4, align 8
  %13 = call i32 @HeapFree(i32 %11, i32 0, %struct.module_format* %12)
  ret void
}

declare dso_local i32 @pe_unmap_file(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.module_format*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
